Implemented exhibition proposal create

--- a/museum-frontend/src/app/feature-modules/exhibitions/exhibition-details/exhibition-details.component.html
+++ b/museum-frontend/src/app/feature-modules/exhibitions/exhibition-details/exhibition-details.component.html
@@ -3,10 +3,10 @@
       <div class="header-content">
         <h1>{{ exhibition.name }}</h1>
         <div class="date">{{ exhibition.startDate  }} – {{ exhibition.endDate  }}</div>
-        <div class="location" *ngIf="exhibition.roomReservations && exhibition.roomReservations.length > 0">
-            <span class="room-info">{{ exhibition.roomReservations[0].room.name }},</span>
-            <span class="floor-info">Floor: {{ exhibition.roomReservations[0].room.floor }},</span>
-            <span class="room-number">Room number: {{ exhibition.roomReservations[0].room.number }}</span>
+        <div class="location" *ngIf="exhibition.roomReservation">
+            <span class="room-info">{{ exhibition.roomReservation.room.name }},</span>
+            <span class="floor-info">Floor: {{ exhibition.roomReservation.room.floor }},</span>
+            <span class="room-number">Room number: {{ exhibition.roomReservation.room.number }}</span>
           </div>
         <button class="book-tickets">Book tickets</button>
       </div>
