--- a/museum-frontend/src/app/feature-modules/stakeholder/components/organizer-profile/organizer-profile.component.html
+++ b/museum-frontend/src/app/feature-modules/stakeholder/components/organizer-profile/organizer-profile.component.html
@@ -20,6 +20,17 @@
         </div>
     </div>
 
+    <div class="header">
+        <h1>Exhibitions</h1>
+        <button (click)="openExhibitionProposalForm()">+</button>
+    </div>
+    
+    <!-- List of exhibitions managed by the organizer 
+    <div class="cards" *ngFor="let exhibition of exhibitions">
+        <app-organizer-exhibition-card [exhibition]="exhibition" (deleted)="onDeleteExhibition(\$event)" (updated)="onUpdateExhibition(\$event)"></app-organizer-exhibition-card>
+    </div>
+    -->
+
     <div>
         <div class="header">
             <h1>Pending invitations</h1>
