feat: Implement request cancelling

--- a/museum-frontend/src/app/feature-modules/tours/components/tour-request-card-view/tour-request-card-view.component.html
+++ b/museum-frontend/src/app/feature-modules/tours/components/tour-request-card-view/tour-request-card-view.component.html
@@ -43,6 +43,26 @@
                 </button>
 
                 <button
+                  class="btn"
+                  *ngIf="user?.role == 'GUEST' && request.status.toString() == 'IN_PROGRESS'"
+                  (click)="updateRequestButtonClicked(request);$event.stopPropagation()"
+                  [@buttonState]="updateRequestButtonState"
+                >
+                  <fa-icon [icon]="faPen" />
+                  &nbsp;Update request
+                </button>
+
+                <button
+                  class="btn"
+                  *ngIf="user?.role == 'GUEST' && request.status.toString() == 'IN_PROGRESS'"
+                  (click)="cancelRequestButtonClicked(request);$event.stopPropagation()"
+                  [@buttonState]="cancelRequestButtonState"
+                >
+                  <fa-icon [icon]="faTrash" />
+                  &nbsp;Cancel request
+                </button>
+
+                <button
                     class="btn"
                     *ngIf="user?.role == 'ORGANIZER'"
                     (click)="acceptButtonClicked(request);$event.stopPropagation()"
