feat: sbp integration

--- a/museum-frontend/src/app/feature-modules/layout/navbar/navbar.component.html
+++ b/museum-frontend/src/app/feature-modules/layout/navbar/navbar.component.html
@@ -85,6 +85,16 @@
       </button>
 
       <button 
+            *ngIf="user && user.role === 'ADMIN'"
+            color="white"
+            mat-raised-button
+            [routerLink]="['journal-view']" 
+      >         
+      <fa-icon [icon]="faArchive" />    
+      &nbsp;See cleaning journals
+      </button>
+
+      <button 
             class="feat-button"
             *ngIf="user && user.role === 'CURATOR'"
             color="white"
