--- a/museum-frontend/src/app/feature-modules/tours/components/request-journal-view/request-journal-view.component.html
+++ b/museum-frontend/src/app/feature-modules/tours/components/request-journal-view/request-journal-view.component.html
@@ -1,11 +1,8 @@
 <div class="overview" [ngStyle]="{'background-size': backgroundSize}">
   <div class="h2-wrapper">
-    <h2>Tours</h2>
+    <h2>Personal Tour Requests Journal Entries</h2>
   </div>
   <br>
-  <div class="p-wrapper">
-
-  </div>
   <div class="tour-search-results">
     <div class="tour-search-result-tours">
       <app-requests-journal-card-view
