--- a/museum-frontend/src/app/feature-modules/cleaning/items-cleaning-view/items-cleaning-view.component.html
+++ b/museum-frontend/src/app/feature-modules/cleaning/items-cleaning-view/items-cleaning-view.component.html
@@ -49,6 +49,9 @@
           <p *ngIf="item.cleaning?.status?.toString() != 'REJECTED'">None</p>
           <button *ngIf="item.cleaning?.status?.toString() == 'REJECTED'" class="action-button" (click)="seeReasonButtonClicked(item.cleaning!)">See reason</button>
         </td>
+        <button (click)="deleteCleaning(item.cleaning!.id || 0)" class="action-button" *ngIf="item.cleaning! && item.cleaning!.status.toString() != 'CLEANSED'">
+          Delete cleaning
+        </button>
       </tr>
     </tbody>
 </table>
