added pdf reports to exhibitions

--- a/museum-frontend/src/app/feature-modules/stakeholder/components/curator-profile/curator-profile.component.html
+++ b/museum-frontend/src/app/feature-modules/stakeholder/components/curator-profile/curator-profile.component.html
@@ -10,6 +10,12 @@
     </div>
 
     <div>
+        <button
+            type="submit"
+            class="report-btn"
+            (click)="openOrganizerExhibitionsReportDialogue()">
+            &nbsp;Generate Exhibitions Report
+        </button>
         <div class="header">
             <h1>Pending invites</h1>
         </div>
