--- a/museum-frontend/src/app/feature-modules/stakeholder/components/organizer-profile/organizer-profile.component.html
+++ b/museum-frontend/src/app/feature-modules/stakeholder/components/organizer-profile/organizer-profile.component.html
@@ -22,8 +22,16 @@
 
     <div class="header">
         <h1>Exhibitions</h1>
+        <button
+          type="submit"
+          class="report-btn"
+          (click)="openOrganizerExhibitionsReportDialogue()">
+        &nbsp;View Exhibitions Insights
+        </button>
         <button (click)="openExhibitionProposalForm()">+</button>
     </div>
+
+    
     
     <!-- List of exhibitions managed by the organizer 
     <div class="cards" *ngFor="let exhibition of exhibitions">
