--- a/museum-frontend/src/app/feature-modules/layout/home/home.component.css
+++ b/museum-frontend/src/app/feature-modules/layout/home/home.component.css
@@ -7,7 +7,7 @@
   font-family: "Poppins", sans-serif;
   display: flex;
   flex-direction: column;
-  background: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.hdwallpapers.in%2Fdownload%2Flouvre_museum_at_sunset-wide.jpg&f=1&nofb=1&ipt=09d86ad89b4b874b4b5142e2f9bf8483b548972f18c8102b8a2ce97ba03950af&ipo=images') no-repeat;
+  background: url('https://images.unsplash.com/photo-1594680353064-9de5c18ecbaa?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') no-repeat;
   background-position: center;
   background-size: cover;
   transition: background-size 0.3s ease;
@@ -15,21 +15,53 @@
 
 .overlay {
   z-index: 3;
-  height: 20%;
-  width: 50%;
+  width: 60%; /* Adjust width for your content */
+  padding: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   gap: 2rem;
-  background: transparent;
-  border: 2px solid rgba(255, 255, 255, .2);
+  background: rgba(27, 27, 27, 0.5); /* Dark semi-transparent background */
+  border: 2px solid rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(10px);
-  box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   color: #fff;
   border-radius: 10px;
-  margin-left: 25%;
-  margin-top: 5%;
+}
+
+.museum-info-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  height: auto; /* Adjust if necessary */
+  margin-top: 100px;
+}
+
+.museum-logo {
+  height: 300px; /* Adjust logo size */
+  margin-bottom: 20px;
+  border-radius: 20px;
+}
+
+.museum-description {
+  max-width: 600px;
+  font-family: 'Playfair Display', serif;
+  color: #f5f5f5;
+}
+
+.museum-description h1 {
+  font-size: 2.5rem;
+  color: #d4af37; /* Bright color for the heading to stand out against the dark background */
+  margin-bottom: 20px;
+}
+
+.museum-description p {
+  font-size: 1.5rem;
+  color: #f5f5f5; /* Light color for the text */
+  line-height: 1.5;
+  text-align: center; /* Center the text */
 }
 
 .banner h1 {
@@ -45,7 +77,7 @@
 }
 
 .wrapper {
-  background: transparent;
+  background: rgba(27, 27, 27, 0.5);
   border: 2px solid rgba(255, 255, 255, .2);
   backdrop-filter: blur(10px);
   box-shadow: 0 0 10px rgba(0, 0, 0, .2);
